Atualizando package.json

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "homepage": "https://marcelo1975.github.io/TemaExemplo/",
   "keywords": [],
   "author": "",
   "license": "ISC"
